## ------------------- ##
#
## ------------------- ##
AUTOMAKE_OPTIONS = 1.4 no-dependencies foreign

## ------------------- ##
# 
## ------------------- ##
ACLOCAL_AMFLAGS = -I m4 

## ------------------- ##
## subdirs of project  ## 
## ------------------- ##
#          doc \
#          tests
#          examples 
#          man 
SUBDIRS =  dfspercd \
           dfscompd \
           dfsanticpd 
# parse

# bin_SCRIPTS = cppunit-config
# man_MANS = cppunit-config.1

#EXTRA_DIST = BUGS INSTALL-unix                          \
#        $(m4sources)

## ------------------- ##
##                     ##
## ------------------- ##
EXTRA_DIST = acinclude.m4                               \
            $(m4sources)

