## ------------------- ##
#
## ------------------- ##
AUTOMAKE_OPTIONS = 1.4 no-dependencies foreign

## ------------------- ##
# 
## ------------------- ##
# ACLOCAL_AMFLAGS = -I m4 

## ------------------- ##
## subdirs of project  ## 
## ------------------- ##
SUBDIRS =  src
            
## ------------------- ##
##                     ##
## ------------------- ##
# EXTRA_DIST = acinclude.m4                               \
#            $(m4sources)

