 SUBDIRS =

# DISTCLEANFILES = config-auto.h

libpcdaodbiincludedir = $(includedir)/pcdao
libpcdaodbiinclude_HEADERS =  \
Connection.h \
ConnectionDirector.h \
Cursor.h \
DaoConfiguration.h \
DaoConnectionException.h \
DaoException.h \
DaoObject.h \
DaoObjectList.h \
DaoResultException.h \
Database.h \
DatabaseDirector.h \
Result.h \
ResultList.h \
ResultListItem.h \
Transaction.h

