SUBDIRS = \
          event \
          filesystem \
          proxy \
          serialize \
          services \
          socket \
          thread 

# DISTCLEANFILES = config-auto.h

libpcffincludedir = $(includedir)/pcff
libpcffinclude_HEADERS =  \
   AttributeValuePair.h \
	BasicException.h \
	BasicExceptionMgr.h \
	BasicMessage.h \
	ConfigException.h \
	Config.h \
	Daemon.h \
        DumpBuffer.h \
	ExceptionConstants.h \
	InformationList.h \
	Log.h \
	LogLevel.h \
	LogLevelTS.h \
	SIGINT_SignalEventHandler.h \
	SignalEventHandler.h \
	SignalHandler.h \
	SIGTERM_SignalEventHandler.h \
	TestException.h \
	Task.h \
	Timer.h \
	TimeStamp.h \
	XMLConfig.h
