SUBDIRS = network

# DISTCLEANFILES = config-auto.h

libpcsecincludedir = $(includedir)/pcsec
libpcsecinclude_HEADERS =  \
   IngestSpooler.h \
   PcsecSensorProxy.h \
   PcsecSensorProxyException.h \
   ProxyConfig.h \
	SensorProxyConfig.h \
	SensorProxyConfigCommandLine.h \
	SensorProxyConfigFile.h
