SUBDIRS = proxy

# DISTCLEANFILES = config-auto.h

libpcffeventincludedir = $(includedir)/pcff/event
libpcffeventinclude_HEADERS =  \
	Event.h \
        EventDirector.h \
	EventException.h \
        EventFactory.h \
        EventHandler.h \
        EventMediator.h \
        EventMessageFactory.h \
        LocalEventMediator.h \
        ObservableEvent.h \
        RemoteEventMediator.h
