# SUBDIRS = 

# DISTCLEANFILES = config-auto.h

libpcffserializeincludedir = $(includedir)/pcff/serialize
libpcffserializeinclude_HEADERS =  \
   FromSerializer.h \
   GetSizeSerializer.h \
   MessageHeaderSerializer.h \
   Serializeable.h \
   SerializeException.h \
   Serializer.h \
   ToSerializer.h
   