# SUBDIRS = 

# DISTCLEANFILES = config-auto.h

libpcffservicesincludedir = $(includedir)/pcff/services
libpcffservicesinclude_HEADERS =  \
	Acceptor.h \
	Connector.h \
	Message.h \
	MessageData.h \
	MessageFactory.h \
	MessageProcessor.h \
	MessageQueue.h \
	ServiceHandler.h \
	ServicesException.h
